--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "com.grimbar-interactive.unity-utilities",
   "displayName": "Unity Utilities",
   "version": "1.0.0",
-  "unity": "2020.3.25f1",
+  "unity": "2020.3",
   "description": "Utilities for Unity development.",
   "keywords": [ "utilities", "game", "games", "unity" ],
   "category": "unity",
