--- a/Runtime/GrimbarInteractive.UnityToolkit.Utilities.asmdef
+++ b/Runtime/GrimbarInteractive.UnityToolkit.Utilities.asmdef
@@ -1,9 +1,7 @@
 {
     "name": "GrimbarInteractive.UnityToolkit.Utilities",
     "rootNamespace": "",
-    "references": [
-        "GUID:e048eeec9bdb9d30448017b829deb3f6"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
