--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "com.grimbarinteractive.unityutilities",
+  "name": "com.grimbarinteractive.unity-utilities",
   "displayName": "Unity Utilities",
-  "version": "1.1.6",
+  "version": "1.2.0",
   "unity": "2022.3",
   "description": "Utilities for Unity development.",
   "keywords": [ "utilities", "game", "games", "unity" ],
